<resources>
    <string name="app_name">Photo Editor</string>

    <string name="filters">Filters</string>
    <string name="edit">Edit</string>
    <string name="brush">Brush</string>
    <string name="emoji">Emoji</string>
    <string name="text">Text</string>
    <string name="enter_text">Enter your text</string>
    <string name="done_btn_text">Done</string>
    <string name="image">Image</string>
    <string name="demo">DEMO</string>
    <string name="font_name">Arial</string>
    <string name="frame">Frame</string>
    <string name="add_frame">Add Frame</string>
    <string name="crop_image">Crop</string>
    <string name="title_camera">CAMERA</string>
    <string name="title_open">OPEN</string>
    <string name="title_save">SAVE</string>
    <string name="brush_size">BRUSH SIZE</string>
    <string name="opacity">OPACITY</string>
    <string name="brightness">BRIGHTNESS</string>
    <string name="contrast">CONTRAST</string>
    <string name="saturation">SATURATION</string>
    <string name="filter_name">FILTER NAME</string>
    <string name="filters_desc">Filters</string>
    <string name="edit_desc">Edit</string>
    <string name="brush_desc">Brush</string>
    <string name="emoji_desc">Emoji</string>
    <string name="text_desc">Text</string>
    <string name="image_desc">Image</string>
    <string name="frame_desc">Frame</string>
    <string name="crop_desc">Crop</string>
    <string name="check_desc">check</string>
    <string name="check_frame_desc">check frame</string>
    <string name="image_frame_desc">image frame</string>
    <string name="thumbnail_desc">thumbnail</string>

</resources>
