<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_camera"
        android:orderInCategory="99"
        android:title="@string/title_camera"
        android:icon="@drawable/ic_camera_yellow_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:title="@string/title_open"
        android:icon="@drawable/ic_open_yellow_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_save"
        android:orderInCategory="101"
        android:title="@string/title_save"
        android:icon="@drawable/ic_save_yellow_24dp"
        app:showAsAction="always"/>
</menu>