<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/card_design_size"
    app:cardCornerRadius="@dimen/card_design_size">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_black_24dp"
            android:visibility="invisible"
            android:contentDescription="@string/check_desc" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">
            
            <TextView
                android:id="@+id/txt_font_demo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo"
                android:textSize="40sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/txt_font_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_name"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>